Closed
Bug 547276
Opened 16 years ago
Closed 16 years ago
[OOPP] Windowed focus hang in CallHasProperty
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jimm, Assigned: jimm)
References
Details
Attachments
(3 files)
No description provided.
| Assignee | ||
Comment 1•16 years ago
|
||
Assignee: nobody → jmathies
| Assignee | ||
Comment 2•16 years ago
|
||
| Assignee | ||
Comment 3•16 years ago
|
||
| Assignee | ||
Updated•16 years ago
|
Attachment #427806 -
Flags: review?(bent.mozilla)
Comment on attachment 427806 [details] [diff] [review]
patch
> nsWindow::IPCWindowProcHandler(HWND& hWnd, UINT& msg, WPARAM& wParam, LPARAM& lParam)
> {
> NS_ASSERTION(!mozilla::ipc::SyncChannel::IsPumpingMessages(),
> "Failed to prevent a nonqueued message from running!");
I suggest asserting also that hWnd == mWnd, just to make sure we know what we're dealing with.
Attachment #427806 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•