Bug 547276 - [OOPP] Windowed focus hang in CallHasProperty. r=bent.